5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1674_1105.log
== TEST (2019-04-25 11:25:19) 
-- CODE:
x = (input("nota: "))
print("Entrada:",x.lower())
if((x=="lobo")or(x=="leao")or(x=="veado")or(x=="dragao")or(x=="rosa")or(x=="sol")or(x=="lula")or(x=="esfolado")or(x=="turta")):
	elif(x=="lobo"):
		y = "Stark"
	elif(x=="leao"):
		y = "Lannister"
	elif(x=="veado"):
		y = "Baratheon"
	elif(x=="dragao"):
		y = "Targaryen"
	elif(x=="rosa"):
		y = "Tyrell"
	elif(x=="sol"):
		y = "Martell"
	elif(x=="lula"):
		y = "Greyjoy"
	elif(x=="esfolado"):
		y = "Bolton"
	elif(x=="turta"):
		y = "Tully"
else:
	y = "invalido"
print("Brasao "+y)
-- ERROR:
File "XXXX", line 4
    elif(x=="lobo"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:26:15) 
-- CODE:
x = (input("nota: ").lower())
print("Entrada:",x)
if((x=="lobo")or(x=="leao")or(x=="veado")or(x=="dragao")or(x=="rosa")or(x=="sol")or(x=="lula")or(x=="esfolado")or(x=="turta")):
	elif(x=="lobo"):
		y = "Stark"
	elif(x=="leao"):
		y = "Lannister"
	elif(x=="veado"):
		y = "Baratheon"
	elif(x=="dragao"):
		y = "Targaryen"
	elif(x=="rosa"):
		y = "Tyrell"
	elif(x=="sol"):
		y = "Martell"
	elif(x=="lula"):
		y = "Greyjoy"
	elif(x=="esfolado"):
		y = "Bolton"
	elif(x=="turta"):
		y = "Tully"
else:
	y = "invalido"
print("Brasao "+y)
-- ERROR:
File "XXXX", line 4
    elif(x=="lobo"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:26:27) 
-- CODE:
x = (input("nota: ").lower())
print("Entrada:",x)
if((x=="lobo")or(x=="leao")or(x=="veado")or(x=="dragao")or(x=="rosa")or(x=="sol")or(x=="lula")or(x=="esfolado")or(x=="turta")):
	if(x=="lobo"):
		y = "Stark"
	elif(x=="leao"):
		y = "Lannister"
	elif(x=="veado"):
		y = "Baratheon"
	elif(x=="dragao"):
		y = "Targaryen"
	elif(x=="rosa"):
		y = "Tyrell"
	elif(x=="sol"):
		y = "Martell"
	elif(x=="lula"):
		y = "Greyjoy"
	elif(x=="esfolado"):
		y = "Bolton"
	elif(x=="turta"):
		y = "Tully"
else:
	y = "invalido"
print("Brasao "+y)
-- OUTPUT:
Entrada: lula
Brasao Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:26:41) 
-- CODE:
x = (input("animal: ").lower())
print("Entrada:",x)
if((x=="lobo")or(x=="leao")or(x=="veado")or(x=="dragao")or(x=="rosa")or(x=="sol")or(x=="lula")or(x=="esfolado")or(x=="turta")):
	if(x=="lobo"):
		y = "Stark"
	elif(x=="leao"):
		y = "Lannister"
	elif(x=="veado"):
		y = "Baratheon"
	elif(x=="dragao"):
		y = "Targaryen"
	elif(x=="rosa"):
		y = "Tyrell"
	elif(x=="sol"):
		y = "Martell"
	elif(x=="lula"):
		y = "Greyjoy"
	elif(x=="esfolado"):
		y = "Bolton"
	elif(x=="turta"):
		y = "Tully"
else:
	y = "invalido"
print("Brasao "+y)
-- OUTPUT:
Entrada: lula
Brasao Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:27:33) 
-- CODE:
x = (input("animal: ").lower())
print("Entrada:",x)
if((x=="lobo")or(x=="leao")or(x=="veado")or(x=="dragao")or(x=="rosa")or(x=="sol")or(x=="lula")or(x=="esfolado")or(x=="turta")):
	if(x=="lobo"):
		y = "Stark"
	elif(x=="leao"):
		y = "Lannister"
	elif(x=="veado"):
		y = "Baratheon"
	elif(x=="dragao"):
		y = "Targaryen"
	elif(x=="rosa"):
		y = "Tyrell"
	elif(x=="sol"):
		y = "Martell"
	elif(x=="lula"):
		y = "Greyjoy"
	elif(x=="esfolado"):
		y = "Bolton"
	elif(x=="turta"):
		y = "Tully"
else:
	y = "invalido"
print("Casa: "+y)
-- EXECUTION TIME:
0.219944
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:28:55) 
-- CODE:
x = (input("animal: ").lower())
print("Entrada:",x)
if((x=="lobo")or(x=="leao")or(x=="veado")or(x=="dragao")or(x=="rosa")or(x=="sol")or(x=="lula")or(x=="esfolado")or(x=="turta")):
	if(x=="lobo"):
		y = "Stark"
	elif(x=="leao"):
		y = "Lannister"
	elif(x=="veado"):
		y = "Baratheon"
	elif(x=="dragao"):
		y = "Targaryen"
	elif(x=="rosa"):
		y = "Tyrell"
	elif(x=="sol"):
		y = "Martell"
	elif(x=="lula"):
		y = "Greyjoy"
	elif(x=="esfolado"):
		y = "Bolton"
	elif(x=="turta"):
		y = "Tully"
	print("Casa: "+y)
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.129911
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
